[svg] applying `rx` or `ry` through CSS exclusively has no effect https://bugs.webkit.org/show_bug.cgi?id=259646 rdar://113500023

Reviewed by Said Abou-Hallawa.

We should not be checking the XML attribute values for `rx` and `ry`
to determine whether a <rect> is rounded, but instead go through the
`SVGRenderStyle` which will the attribute values reflected as well as
account for the CSS properties.

* LayoutTests/imported/w3c/web-platform-tests/svg/shapes/rect-rx-set-by-css-expected.svg: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/shapes/rect-rx-set-by-css-ref.svg: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/shapes/rect-rx-set-by-css.svg: Added.
* Source/WebCore/rendering/svg/RenderSVGRect.cpp:
(WebCore::RenderSVGRect::updateShapeFromElement):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGRect.cpp:
(WebCore::LegacyRenderSVGRect::updateShapeFromElement):

Canonical link: https://commits.webkit.org/271970@main